--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(kinovaArm_lib STATIC  KinovaArm.cpp KinovaArm.h
                                   PositionHandling.cpp PositionHandling.h
                                   StateMachine.cpp StateMachine.h
                                   Transition.h
+                                  Event.h
                                   State.cpp State.h
                                   CommandHandling.cpp CommandHandling.h)
 
