included basic logging-Class. Console-Logging only atm.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,4 +7,6 @@ project (kinovaZED_test)
 add_executable(KinovaTest KinovaTest.cpp)
 target_link_libraries(KinovaTest PUBLIC libkindrv PRIVATE kinovaArm_lib)
 
-
+#Log Test
+add_executable(LogTest LogTest.cpp)
+target_link_libraries(LogTest PRIVATE kinovaArm_lib)
