Set C++ version to 14, to be able to compile on Raspi

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,7 @@ target_link_libraries(KinovaTest
   PRIVATE
   kinovaArm_lib
 )
+set_property(TARGET KinovaTest PROPERTY CXX_STANDARD 14)
 
 #Log Test
 add_library(logtest_lib
