--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(KinovaTest
   KinovaTest.cpp 
   IntegrationSuite.cpp
   MatrixSuite.cpp
+  KinovaArmSuite.cpp
   PositionHandlingSuite.cpp
   SequenceSuite.cpp
 )
