build: update to latest libkindrv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
-cmake_minimum_required(VERSION 3.9.0)
+cmake_minimum_required(VERSION "3.9.0")
+cmake_policy(SET "CMP0048" NEW)
 
-project (kinovaZED
+project("kinovaZED"
   LANGUAGES CXX
+  VERSION "2.0.0"
 )
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
@@ -9,10 +11,19 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
 set(CMAKE_CXX_STANDARD "14")
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+
+### System Dependencies Setup
+
+find_package("Boost"
+  REQUIRED
+  COMPONENTS "system"
+)
+
+### Conan Dependencies Setup
 
 include("Conan")
 conan_check(REQUIRED)
-# conan_add_remote(NAME "fmorgner-public" URL "https://api.bintray.com/conan/fmorgner/conan-public")
 conan_cmake_run(CONANFILE "conanfile.txt"
   BASIC_SETUP
   CMAKE_TARGETS
@@ -20,19 +31,18 @@ conan_cmake_run(CONANFILE "conanfile.txt"
   NO_OUTPUT_DIRS
 )
 
+### Local Dependencies Setup
+
+add_subdirectory("thirdparty/libkindrv")
+
 #Create logs directory
+
 file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/logs")
 
-add_subdirectory(thirdparty/libkindrv)
-add_subdirectory(thirdparty/spdlog)
 
-set(JSON_BuildTests OFF CACHE INTERNAL "")
-add_subdirectory(thirdparty/json)
+### Core Library
 
-find_package(Boost REQUIRED COMPONENTS system)
-
-# Kinova Arm Core
-add_library(kinovaArm_core STATIC
+add_library("${PROJECT_NAME}Core"
   "src/KinovaArm.cpp"
   "src/Coordinates.cpp"
   "src/Objective.cpp"
@@ -41,105 +51,73 @@ add_library(kinovaArm_core STATIC
   "src/State.cpp"
   "src/StateMachine.cpp"
   "src/TCPServer.cpp"
-
-  "include/CommandHandling.h"
-  "include/Coordinates.h"
-  "include/Event.h"
-  "include/Exceptions.h"
-  "include/KinovaStatus.h"
-  "include/Matrix.h"
-  "include/Objective.h"
-  "include/Prefix.h"
-  "include/RoboRioProtocol.h"
-  "include/Transition.h"
 )
 
-target_compile_options(
-  kinovaArm_core
-  PUBLIC
+target_compile_options("${PROJECT_NAME}Core" PUBLIC
   $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
-    -Wall
-    -Wextra
-    -Werror
-#    -pedantic-errors
+    "-Wall"
+    "-Wextra"
+    "-Werror"
+    "-pedantic-errors"
   >
 )
 
-target_include_directories(kinovaArm_core
-  PUBLIC
-  ${PROJECT_SOURCE_DIR}/include
+target_include_directories("${PROJECT_NAME}Core" PUBLIC
+  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
 )
 
-target_link_libraries(kinovaArm_core
+target_link_libraries("${PROJECT_NAME}Core"
   PUBLIC
-  "libkindrv"
+  "Boost::system"
   "CONAN_PKG::nlohmann_json"
   "CONAN_PKG::spdlog"
-  # "spdlog::spdlog_header_only"
-  # "nlohmann_json::nlohmann_json"
+  "kindrv"
   "rt"
-  ${Boost_LIBRARIES}
 )
 
-get_target_property(kinovaArm_core_SOURCES "kinovaArm_core" SOURCES)
-foreach(SOURCE_FILE IN LISTS kinovaArm_core_SOURCES)
-  if(SOURCE_FILE MATCHES "src/.*\.cpp")
-    string(REGEX REPLACE
-      "src/(.*)\.cpp"
-      "include/\\1.h"
-      HEADER_FILE
-      "${SOURCE_FILE}"
-    )
-    get_filename_component(HEADER_FILE_PATH "${HEADER_FILE}" REALPATH)
-    if(EXISTS "${HEADER_FILE_PATH}")
-      target_sources("kinovaArm_core"
-        INTERFACE
-        "${HEADER_FILE_PATH}"
-      )
-    endif()
-  endif()
-endforeach()
+### Main Application
 
-#Main Program
-add_executable(KinovaZED
+add_executable("${PROJECT_NAME}"
   "src/KinovaMain.cpp"
 )
-target_link_libraries(KinovaZED
+
+target_link_libraries("${PROJECT_NAME}"
   PUBLIC
-  "kinovaArm_core"
+  "${PROJECT_NAME}Core"
 )
-target_compile_options(
-  KinovaZED
-  PUBLIC
+
+target_compile_options("${PROJECT_NAME}" PUBLIC
   $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
-    -Wall
-    -Wextra
-    -Werror
-#    -pedantic-errors
+    "-Wall"
+    "-Wextra"
+    "-Werror"
+    "-pedantic-errors"
   >
 )
 
-#Unit and Integration Tests
-add_executable(KinovaTest
-  "test/KinovaTest.cpp"
-  "test/IntegrationSuite.cpp"
-  "test/MatrixSuite.cpp"
-  "test/KinovaArmSuite.cpp"
-  "test/PositionHandlingSuite.cpp"
-  "test/SequenceSuite.cpp"
-)
+# #Unit and Integration Tests
 
-target_include_directories("KinovaTest"
-  PRIVATE
-  "test/cute"
-)
+# add_executable(KinovaTest
+#   "test/KinovaTest.cpp"
+#   "test/IntegrationSuite.cpp"
+#   "test/MatrixSuite.cpp"
+#   "test/KinovaArmSuite.cpp"
+#   "test/PositionHandlingSuite.cpp"
+#   "test/SequenceSuite.cpp"
+# )
 
-target_link_libraries("KinovaTest"
-  PRIVATE
-  "kinovaArm_core"
-)
+# target_include_directories("KinovaTest"
+#   PRIVATE
+#   "test/cute"
+# )
 
-#Copy autorun script and data points
-configure_file(${PROJECT_SOURCE_DIR}/KinovaStartUp.sh ${PROJECT_BINARY_DIR} COPYONLY)
-configure_file(${PROJECT_SOURCE_DIR}/CybathlonObjectives.dat ${PROJECT_BINARY_DIR} COPYONLY)
-configure_file(${PROJECT_SOURCE_DIR}/CybathlonObjectives.json ${PROJECT_BINARY_DIR} COPYONLY)
+# target_link_libraries("KinovaTest"
+#   PRIVATE
+#   "kinovaArm_core"
+# )
+
+# #Copy autorun script and data points
+# configure_file(${PROJECT_SOURCE_DIR}/KinovaStartUp.sh ${PROJECT_BINARY_DIR} COPYONLY)
+# configure_file(${PROJECT_SOURCE_DIR}/CybathlonObjectives.dat ${PROJECT_BINARY_DIR} COPYONLY)
+# configure_file(${PROJECT_SOURCE_DIR}/CybathlonObjectives.json ${PROJECT_BINARY_DIR} COPYONLY)
