json: restore feature parity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_library("${PROJECT_NAME}Core"
   "src/KinovaArm.cpp"
   "src/Logging.cpp"
   "src/Objective.cpp"
+  "src/ObjectiveId.cpp"
   "src/PositionHandling.cpp"
   "src/Sequence.cpp"
   "src/State.cpp"
