--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ add_library("${PROJECT_NAME}Core"
   "src/Logging.cpp"
   "src/Objective.cpp"
   "src/ObjectiveId.cpp"
+  "src/Origin.cpp"
   "src/PositionHandling.cpp"
   "src/Sequence.cpp"
   "src/State.cpp"
