--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ add_subdirectory("thirdparty/libkindrv")
 ### Core Library
 
 add_library("${PROJECT_NAME}Core"
+  "src/Command.cpp"
+  "src/ControlInterface.cpp"
   "src/Coordinates.cpp"
   "src/KinovaArm.cpp"
   "src/Logging.cpp"
