Revert "updated remote of submodules to repo on gitlab.ost"
This reverts commit 1dd6d31c69da275e30c76dc1c5416475caee4301.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "thirdparty/libkindrv"]
 	path = thirdparty/libkindrv
-	url = https://gitlab.ost.ch/ilt/projekte/enhanced/wheel/libkindrv.git
+	url = https://iltserver.hsr.ch:9090/hsr-enhanced/libkindrv.git
